# w3.terrain-texturing

./: .gitignore  Cargo.toml  README.md  bevy-patch  bevy_egui-patch
assets/shaders/: brush_frag.wgsl  brush_vert.wgsl  fog_frag.wgsl  fog_vert.wgsl  path_visualization.wgsl  terrain_frag.wgsl  terrain_vert.wgsl  tonemapping_frag.wgsl  tonemapping_vert.wgsl
assets/shaders/atmosphere/: sky.frag  sky.vert
assets/shaders/compute/: normals.wgsl  terrain_shadows.wgsl
src/: camera.rs  clipmap.rs  config.rs  heightmap.rs  lib.rs  loader.rs  mut_renderasset.rs  resource.rs  shapes.rs  terrain_material.rs  texturearray.rs  texturecontrol.rs  tintmap.rs
src/atmosphere/: material.rs  mod.rs
src/autofly_camera/: interpolation.rs  mod.rs  shapes.rs  visualization.rs
src/cmds/: async_cmds.rs  mod.rs  progress.rs
src/compute/: cache.rs  computetask.rs  mod.rs  normals.rs
src/environment/: definition.rs  interpolation.rs  mod.rs  settings.rs  sun.rs  utils.rs
src/gui/: egui_extensions.rs  images.rs  mod.rs  progresstracking.rs  update.rs
src/gui/debug/: mod.rs
src/gui/debug/view/: clipmap.rs  menu.rs  mod.rs
src/gui/toolbox/: blendingbrush.rs  common.rs  mod.rs  scalingbrush.rs  texturebrush.rs  update.rs
src/gui/toolbox/view/: blending.rs  common.rs  materialpalette.rs  materialsettings.rs  mod.rs  scaling.rs  textures.rs
src/gui/view/: atmosphere.rs  daynight.rs  debug.rs  materialpalette.rs  menu.rs  mesh.rs  mod.rs  rendersettings.rs
src/terrain_clipmap/: mod.rs  tracker.rs
src/terrain_material/: mod.rs
src/terrain_painting/: mod.rs
src/terrain_render/: mod.rs  terrain_info.rs
src/terrain_render/brush/: brush_pass.rs  mod.rs  pipeline.rs  pointer.rs  render_node.rs
src/terrain_render/environment/: mod.rs  resource.rs
src/terrain_render/environment/fog/: mod.rs  pipeline.rs  render_node.rs  systems.rs
src/terrain_render/pipeline/: mod.rs  terrain_pass.rs  terrain_pass_driver.rs
src/terrain_render/render/: mod.rs  terrain_mesh.rs
src/terrain_render/rendergraph/: mod.rs  terrain_pass.rs  terrain_pass_driver.rs
src/terrain_render/terrain/: mod.rs  pipeline.rs  terrain_clipmap.rs  terrain_environment.rs  terrain_material.rs  terrain_mesh.rs
src/terrain_render/terrain_shadows/: compute_node.rs  mod.rs  pipeline.rs  precomputed.rs  resource.rs  systems.rs
src/terrain_render/tonemapping/: mod.rs  pipeline.rs  render_node.rs  systems.rs
src/terrain_tiles/: errormap.rs  generator.rs  lod.rs  mod.rs  settings.rs
