[package]
name = "terrain-editor"
version = "0.1.0"
edition = "2021"
authors = ["rmemr"]

[dependencies]
bevy = { path = "../bevy", default-features = false, features = [
  "dynamic",
  "bevy_winit",

  "bevy_core_pipeline",
  "bevy_render",
  "bevy_pbr",     # TODO remove ?

  "x11",
  "filesystem_watcher",
] }

bevy_egui = { path = "../bevy_egui", default-features = false }

# needed for height/texture/tint map loader
image = { version = "0.23", features = ["png"] }


[[bin]]
name = "terrain-editor"
path = "src/bin/terrain-editor.rs"
