[package]
name = "terrain-editor"
version = "0.1.0"
edition = "2021"
authors = ["rmemr"]

[dependencies]
bevy = { path = "../bevy", default-features = false, features = [
  "dynamic",
  "bevy_winit",

  "bevy_core_pipeline",
  "bevy_render",
  "bevy_pbr",     # TODO remove ?

  "x11",
  "filesystem_watcher",
] }

bevy_egui = { path = "../bevy_egui", default-features = false }

# needed for async tasks
enum_dispatch = "0.3"
futures-lite = "1.11.3"
# needed for compute task result
async-channel = "1.4"

# needed for height/texture/tint map loader
image = { version = "0.23", features = ["png"] }
png = "0.17"

[[bin]]
name = "terrain-editor"
path = "src/bin/terrain-editor.rs"

[profile.dev.package.png]
opt-level = 3
debug = false
split-debuginfo = 'packed'
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.dev.package.image]
opt-level = 3
debug = false
split-debuginfo = 'packed'
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
