[package]
name = "terrain-editor"
version = "0.1.0"
edition = "2021"
authors = ["rmemr"]
# license = "GPL-3 WITH bevy exception"
license-file = "README.md#License"
readme = "README.md"
repository = "https://codeberg.org/rmemr/w3.terrain-texturing"

[dependencies]
bevy = { path = "../bevy", default-features = false, features = [
  "dynamic",
  "bevy_winit",

  "bevy_core_pipeline",
  "bevy_render",
  "bevy_pbr",     # TODO remove (atm needed for MaterialPipeline, SpecializedMaterial definitions)

  "x11",
  "filesystem_watcher",
] }

bevy_egui = { path = "../bevy_egui", default-features = false }

# needed for async tasks
enum_dispatch = "0.3"
futures-lite = "1.11.3"
# needed for compute task result
async-channel = "1.4"

# needed for height/texture/tint map loader
image = { version = "0.23", features = ["png"] }
byteorder = "1.0"
png = "0.17"

# needed for mesh generation deferring to next frame
instant = { version = "0.1" }
# needed for mesh pipeline key flags
bitflags = "1.2"

# randomized brush params
rand = "0.8.0"

# interpolation of environment settings + cam flyby
splines = "4.1"

# needed for cam flyby visualization instance data
bytemuck = { version = "1.5", features = ["derive"] }

[[bin]]
name = "terrain-editor"
path = "src/bin/terrain-editor.rs"

[profile.dev.package.png]
opt-level = 3
debug = false
split-debuginfo = 'packed'
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.dev.package.image]
opt-level = 3
debug = false
split-debuginfo = 'packed'
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16
